# h4r_rapid_robot_xacros

./: CMakeLists.txt  LICENSE  package.xml
config/: gantry.yaml
def/: rapid_robot.xacro
def/drive/: diff_drive.xacro  wheel_solid.xacro
def/fixes/: id_link.xacro
def/geometry/: geo_ins.xacro
def/inertia/: box_solid.xacro  cylinder_solid.xacro  sphere_shell.xacro  sphere_solid.xacro
def/joints/: fixed.xacro  linear_axis.xacro  ros_control.xacro
def/material/: mat_def.xacro  materials.xacro
def/rooms/: wall.xacro
def/sensors/contact/: bumper.xacro
def/sensors/distance/: laser_2d.xacro
def/sensors/imaging/: camera.xacro
def/sensors/inertia/: imu.xacro
def/sensors/position/: gps.xacro
def/simple/: simple_box.xacro
def/test_robots/: diff_drive_bot.xacro  gantry_bot.xacro  portalbot.xacro
def/test_robots/diff_drive_bot/: bumpers.xacro  camera.xacro  caster.xacro  chassis.xacro  drive.xacro  gps.xacro  imu.xacro  laser.xacro  properties.xacro
def/video/: screen.xacro
def/world/: static.xacro  world_joint.xacro
defs/: constants.xacro  rapid_robot.xacro
defs/drive/: diff_drive.xacro  simple_wheel.xacro  wheel_solid.xacro
defs/geometry/: geo_ins.xacro
defs/inertia/: box_solid.xacro  sphere_solid.xacro
defs/material/: gazebo_simple.xacro  materials.xacro  rr_mats.xacro
defs/test_robots/: diff_drive_bot.xacro
launch/: diff_drive_bot.launch  empty_world.launch  gantry_bot.launch  model_test.launch  multi_diff_drive_bot.launch  portal.launch  spawn.launch  test_bot_description.xml
rviz/: diff_drive_bot.rviz  portal.rviz
(+30 files in other folders)
