<?xml version="1.0"?>
<package>
  <name>h4r_rapid_robot_xacros</name>
  <version>0.1.0</version>
  <description>The h4r_rapid_robot_xacros package</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author email="cyborgx1@gmail.com">Christian Holl</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  
  <export>

  </export>
</package>